# rag-faq-plurelo

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  faq_plurelo.json  main.py  pyproject.toml  thread.md
.github/workflows/: deploy.yml
app/services/: rag_pipeline.py
